# flask-restful-format

./: .dockerignore  .gitignore  Makefile  README.md  entrypoint.sh  pyproject.toml  pytest.ini  requirements.txt
app/: app.py  config.py  db.py  schemas.py
app/api/: demo_api.py
app/resources/: __init__.py  basic_model.py
