[tool.poetry]
name = "flaks-restful-api"
version = "0.1.0"
description = ""
authors = ["Keyhong <wnhong96@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.3"
python-dotenv = "^1.0.1"
flask-smorest = "^0.44.0"
flask-sqlalchemy = "^3.1.1"
gunicorn = "^22.0.0"


[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
isort = "^5.13.2"
pylint = "^3.2.0"
pytest = "^8.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
